--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Hello world
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Raul's Blog</title>
+</head>
+<body>
+	<h1 align="center">Rauls Blog</h1>
+</body>
+</html>
